# stonkmarket2

./: .env.example  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.dev  Makefile  README.md  STATIC_REPORT.md  STRATEGY_REFACTOR.md  TESTING.md  alembic.ini  dips.sqlite-shm  dips.sqlite-wal  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  init.sql  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-quant.txt  requirements.txt  run_single_strategy.py  run_strategy_job.py  test.html  test_openai.py
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 20241225_0001_001_baseline_initial_baseline_migration.py  20251225_1249_4c41a63f2011_add_data_versioning_ingest_queue_and_.py  20251225_1310_efd4cdb041fb_search_improvements_trigram_cursor_.py  20251225_1320_6c33357bd596_add_batch_task_tracking.py  20251225_1324_9a1752a5fd0d_expand_summary_ai_column.py  20251225_1341_c14161221ecb_add_missing_indexes.py  20251226_0943_037035a6ec44_add_financial_statements_and_domain_.py  20251226_1114_de8f24192475_initial_schema.py  20251226_1205_d40200938afb_add_settings_change_history.py  20251227_1120_9c7a7e67f5b1_add_ai_persona_table.py  20251227_1139_ae947f07d81b_fix_ai_signal_constraint.py  20251227_1153_3413a77cf8e2_rename_cronjobs_to_new_names.py  20251227_1200_f2b3c8e1a9d0_add_portfolio_tables.py  20251227_2130_19d3bbf89488_add_domain_metrics_interest_expense_.py  20251228_0900_9b6f1d2c7a1e_add_portfolio_analytics_jobs.py  20251228_1140_a182ff9bc71b_add_strategy_signals_table.py  20251228_1715_02e0820c822b_add_beats_spy_column.py  20251228_1730_03f1932d845a_add_dividend_date_columns.py  20251228_1742_6dd8bada218c_add_quant_scores_table.py  20251228_1744_941e2641ac7f_add_quant_scores_unique_symbol.py  20251229_0809_ec98cb56b782_add_typical_recovery_days_to_strategy_.py  20251229_1330_322fb07d2183_add_opportunity_type_to_dip_state.py  20251229_1416_74c5e4daa063_add_eva_columns_to_dip_state.py  20251229_1648_17324cd39318_add_ai_pending_to_dip_ai_analysis.py  20251229_1805_a76597402634_add_agent_pending_column.py  20251229_1817_3f40fcf6b234_add_stock_info_cache_columns.py  20251229_1851_a2546d638f37_add_quant_precomputed_table.py  20251229_1921_4a35ce67ae76_add_dip_entry_and_triggers_to_quant_.py  20251229_2204_ead0c5f7831d_add_max_profit_columns_to_quant_.py  20251230_0942_e243f6a12158_add_financial_universe_table.py  20251230_0958_4416a7b94e51_add_universe_sync_cronjob.py  20251230_1040_425459551ea8_drop_portfolio_cash_balance.py  20251230_1056_8628a993c359_add_portfolio_ai_analysis_fields.py  (+7 more)
app/: __init__.py  auth.py  celery_app.py  config.py  db.py  main.py  models.py  scheduler.py
docs/: CACHING.md  QUANT_ENGINE_V2_DESIGN.md  REFACTORING.md  SCORING.md  SCORING_REVIEW.md  SYSTEM_TESTING.md
example_prompts/: 01_bio.md  03_rating.md  04_summary.md  README.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
migrations/: 001_add_summary_ai.sql  002_placeholder.sql  003_rename_tinder_to_swipe.sql  004_add_logo_columns.sql  005_add_symbol_type_and_dip_start.sql  006_add_fundamentals.sql  006_add_suggestions_price_columns.sql  007_fix_ai_rating_type.sql  010_add_search_results_table.sql
migrations_deprecated/: 001_baseline.sql  006_add_ai_agent_analysis.sql  007_add_search_cache.sql  008_add_symbol_fetch_status.sql  009_increase_summary_ai_size.sql
new/: index.html  vite.config.ts
scripts/: analyze_holding_periods.py  run_strategy_optimize.py  run_system_tests.sh  statistical_validation.py  test_api_endpoints.py  test_backtest_logic.py  test_regime_aware.py
system_tests/: __init__.py  config.py  conftest.py
tests/: __init__.py  conftest.py  test_api_keys.py  test_auth.py  test_backtest_engine.py  test_batch_jobs.py  test_batch_jobs_integration.py  test_cronjobs.py  test_dip_entry_v2_sanity.py  test_dipfinder_api.py  test_dipfinder_dip.py  test_dipfinder_math.py  test_dipfinder_signal.py  test_dipfinder_stability.py  test_dips.py  test_domain_models.py  test_domain_scoring.py  test_financedatabase.py  test_financials.py  test_health.py  test_hedge_fund.py  test_improvements.py  test_mfa.py  test_notifications.py  test_price_validation.py  test_quant_engine.py  test_quant_engine_v2.py  test_quant_improvements.py  test_refactored_behaviors.py  test_resilience.py  test_scoring.py  test_settings_behavior.py  test_stock_tinder.py  test_suggestions.py  test_swipe.py  test_symbols.py  test_yfinance_typed.py
(+528 files in other folders)
